# CPACodexKeeper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.en.md  README.md  disabled_accounts.json  docker-compose.yml  enable_all_codex.py  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.history/: .env_20260419191325  .env_20260420015522  .env_20260420015605  .env_20260420025927.example  .env_20260420030904.example  .env_20260420031303  .env_20260420031315  .env_20260420031941.example  .env_20260420031945.example  .env_20260420032556.example  .env_20260420032604  .env_20260420040151  .env_20260420043602.example  .env_20260420045145  .env_20260420045153.example  .env_20260420045222  .env_20260420045234  .env_20260420121138  .gitignore_20260420015933  .gitignore_20260420015950  Dockerfile_20260420050420  Dockerfile_20260420050436  Dockerfile_20260420050503  README_20260420043408.md  README_20260420043955.md  docker-compose_20260509004655.yml  docker-compose_20260509005324.yml  docker-compose_20260509005330.yml  parse_json_20260420013833.py  test_20260420013741.json
.history/src/: maintainer_20260420015133.py  maintainer_20260420015149.py  maintainer_20260420032518.py  maintainer_20260420032819.py  maintainer_20260420032919.py  maintainer_20260420032922.py  (+15 more)
src/: __init__.py  cli.py  cpa_client.py  logging_utils.py  maintainer.py  models.py  openai_client.py  settings.py  utils.py
tests/: test_cli.py  test_cpa_client.py  test_docker_compose.py  test_enable_all_codex.py  test_maintainer.py  test_project_files.py  test_settings.py
(+30 files in other folders)
