[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpacodexkeeper"
version = "0.1.0"
description = "Maintain type=codex tokens from a CPA management API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "curl-cffi>=0.7.0",
]
authors = [
  { name = "Tao" }
]
keywords = ["cpa", "codex", "token", "maintenance", "daemon"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
cpacodexkeeper = "src.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
